force-app/main/default/objects/Program__c/Program__c.object-meta.xml
<CustomObject>
    <label>Program</label>
    <nameField>
        <displayFormat>PR-{{0000}}</displayFormat>
        <label>Program Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Programs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>