force-app/main/default/objects/Program__c/fields/Client_Profile__c.field-meta.xml
<CustomField>
    <fullName>Client_Profile__c</fullName>
    <description>Client Profile field for Fitness Tracker.</description>
    <label>Client Profile</label>
    <type>Lookup</type>
    <referenceTo>Client_Profile__c</referenceTo>
    <relationshipLabel>Client Profile</relationshipLabel>
    <relationshipName>ClientProfile</relationshipName>
</CustomField>