force-app/main/default/objects/Program__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Start Date field for Fitness Tracker.</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>