force-app/main/default/objects/Program__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Status field for Fitness Tracker.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet><valueSetDefinition><sorted>false</sorted>
    <value><fullName>Draft</fullName><default>true</default><label
        >Draft</label></value>
    <value><fullName>Active</fullName><default>false</default><label
        >Active</label></value>
    <value><fullName>Completed</fullName><default>false</default><label
        >Completed</label></value>
    <value><fullName>Paused</fullName><default>false</default><label
        >Paused</label></value>
    </valueSetDefinition></valueSet>
</CustomField>